--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -226,8 +226,7 @@
             <div class="bg-video">
                 <video class="bg-video__content" autoplay muted loop>
                     <source src="img/video.mp4" type="video/mp4">
-                    <source src="img/video.webm" type="video/webm">
-                        Your browser is not supported!
+                    <source src="img/video.webm" type="video/webm"> Your browser is not supported!
                 </video>
             </div>
             <div class="u-center-text u-margin-bottom-big">
@@ -250,40 +249,47 @@
                         </h3>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ad dolores, vitae architecto nemo iure alias minima,
-                            laborum illo itaque aut, repellendus deserunt non maiores doloribus.laborum illo itaque aut, repellendus deserunt non maiores doloribus.
+                            laborum illo itaque aut, repellendus deserunt non maiores doloribus.laborum illo itaque aut,
+                            repellendus deserunt non maiores doloribus.
                         </p>
                     </div>
                 </div>
             </div>
             <div class="row">
-                    <div class="story">
-                        <figure class="story__shape">
-                            <img src="img/nat-9.jpg" alt="person on a tour" class="story__img">
-                            <figcaption class="story__caption">
-                                Jack Wilson
-                            </figcaption>
-                        </figure>
-    
-                        <div class="story__text">
-                            <h3 class="heading-tertiary u-margin-bottom-small">
-                                WOW! My life is completely different now
-                            </h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ad dolores, vitae architecto nemo iure alias minima,
-                                laborum illo itaque aut, repellendus deserunt non maiores doloribus.laborum illo itaque aut, repellendus deserunt non maiores doloribus.
-                            </p>
-                        </div>
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-9.jpg" alt="person on a tour" class="story__img">
+                        <figcaption class="story__caption">
+                            Jack Wilson
+                        </figcaption>
+                    </figure>
+
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            WOW! My life is completely different now
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ad dolores, vitae architecto nemo iure alias minima,
+                            laborum illo itaque aut, repellendus deserunt non maiores doloribus.laborum illo itaque aut,
+                            repellendus deserunt non maiores doloribus.
+                        </p>
                     </div>
                 </div>
-                <div class="u-center-text u-margin-top-big">
-                        <a href="#" class="btn btn-text">
-                            Read all stories &rarr;
-                        </a>
-                </div>
+            </div>
+            <div class="u-center-text u-margin-top-big">
+                <a href="#" class="btn btn-text">
+                    Read all stories &rarr;
+                </a>
+            </div>
+        </section>
+        <section class="section-book">
+            <div class="row">
+                <div class="book"></div>
+            </div>
         </section>
     </main>
 
-    <!-- 
+    <!--
     <section class="grid-text">
     <div class="row">
         <div class="col-1-of-2">Col 1 of 2</div>
